# akshare-value-investment

./: .coverage  .env.example  .flake8  .gitignore  .mcp.json  CLAUDE.md  PROJECT_SUMMARY.md  README.md  debug_tencent_fields.py  demonstration.py  fix_tencent_assets.py  package-lock.json  pyproject.toml  pytest.ini  start_mcp.sh  start_services.sh  tencent_net_assets_final.py  test_mcp_integration.py  test_mcp_query.py  test_simple_query.py  test_tencent_net_assets.py
.cache/: cache.db  cache.db-shm  cache.db-wal
.claude/: index.json
.claude/plan/: mcp-development-plan.md  财务指标查询feature.md
.github/workflows/: python-app.yml
.serena/: project.yml
.serena/memories/: PROJECT_COMPREHENSIVE_OVERVIEW_20251111.md  SYSTEM_STATUS.md  class_refactoring_financial_query_service_20251111.md  current_architecture_status.md  documentation-reorganization.md  function_refactoring_record_20251111.md  interface_refactoring_separation_20251111.md  mcp-development-planning.md  mcp-implementation-summary.md  problem_solution_record.md  refactoring_and_testing_completion.md  test_coverage_progress.md
archive/obsolete_tests/: get_akshare_fields.py  get_tencent_roe.py  inventory_turnover_final_demo.py  inventory_turnover_old.py  query_dongpeng.py  simple_mcp_test.py  test_akshare_data.py  test_alternative_data.py  test_concept_mcp.py  test_coverage_improvement.py  test_enhanced_field_mapper.py  test_fixed_system.py  test_mcp_diagnosis.py  test_simple_keyword_approach.py  test_uncovered_field_behavior_simple.py
archive/simplified_legacy/: adapter_strategies.py  adapter_strategies_impl.py  adapters.py  adapters_refactored.py  configurable_response_formatter.py  error_handler.py  exceptions.py  format_config.py  query_service.py
cache/: financial_data.db
doc/: ARCHITECTURE_REFACTOR_PLAN.md  CACHE_SYSTEM_SUBMISSION_SUMMARY.md  CACHE_SYSTEM_TECHNICAL_GUIDE.md  CACHE_USAGE_GUIDE.md  IFRS_FIELDS_REFERENCE.md  IFRS_TO_MARKET_FIELD_MAPPING.md  INHERITANCE_WITH_CONFLICT_DETECTION.md  MCP_ARCHITECTURE_GUIDE.md  MCP_CACHE_INTEGRATION_REPORT.md  MCP_DESIGN_SUMMARY.md  MCP_SERVER_SETUP.md  README.md  SOLID_REFACTORING_SUMMARY.md  STANDARD_FIELDS_DEFINITION.md  STOCK_IDENTIFIER_INTEGRATION_SUMMARY.md  SYSTEM_ARCHITECTURE_SUMMARY.md  TIME_RANGE_FILTERING_FIX.md  a_stock_check_list.md  a_stock_fields.md  akshare_api_reference.md  field_completeness_plan.md  hk_stock_fields.md  stock_check_list.md  us_stock_fields.md  webapp组件化重构设计文档.md  手把手教你读财报精简工具版.md  财报检查清单.md
doc/algorithms/: INTELLIGENT_FIELD_ALGORITHMS_DESIGN.md
doc/archive/: README.md  SETUP_COMPLETE.md  field-mappings.md  financial-indicators.md  universal-financial-query.md
doc/archived/: SIMPLIFIED_USAGE_GUIDE.md  SOLID_TESTING_GUIDE.md  字段概念映射系统设计方案.md
doc/mcp/: CLAUDE_CODE_MCP_SETUP.md  README.md  README_MCP.md
doc/research/: FINAL_RESEARCH_SUMMARY.md  FINANCIAL_STATEMENTS_EXTENSION.md  README.md  financial_statements_config_extension.md
doc/sample_data/: DATA_SOURCE_API_REFERENCE.md  a_stock_balance_sheet_sample.csv  a_stock_cash_flow_sheet_sample.csv  a_stock_data_analysis.md  a_stock_indicators_sample.csv  hk_stock_data_analysis.md  us_stock_data_analysis.md  us_stock_indicators_sample.csv
examples/: README.md  demo.py  smart_cache_demo.py
prototype/arch/: README.md  README_FINAL.md  data_models.py  field_mappings.py  final_architecture.py  interfaces_v2.py  stock_identifier.py
prototype/cache_validation/: README.md  cache_decorators.py  financial_adapter.py  mock_akshare.py  quick_test.sh  requirements.txt  run_validation.sh  test_business_cache.py
prototype/data-fetching/: README.md  a_stock_financial_indicators.py  hk_stock_00700_financial_indicators.csv  hk_stock_00941_financial_indicators.csv  hk_stock_02318_financial_indicators.csv  hk_stock_financial_indicators.py  moutai_5years_annual.csv  us_stock_AAPL_financial_indicators.csv  us_stock_TSLA_financial_indicators.csv  us_stock_financial_indicators.py
prototype/mcp_field_mapping/: INTERACTIVE_LEARNING_DESIGN.md  PROTOTYPE_VALIDATION_REPORT.md  README.md  TEST_RESULTS_ANALYSIS.md  __init__.py  quick_test.py  simple_learning_demo.py
prototype/smartcache/: REFERENCE_GUIDE.md  integration_example.py  smart_decorator.py  sqlite_cache.py  test_incremental_single.db  test_single_side_incremental.py
scripts/: download_financial_statements.py
src/akshare_value_investment/: __init__.py  adapters.py  container.py  interfaces.py  mcp_server.py  mcp_server_fixed.py  models.py  query_service.py  stock_identifier.py
tests/: README.md  conftest.py  test_a_stock_queryers.py  test_adapter_debug.py  test_balance_sheet_mapping_tdd.py  test_cache_debug.py  test_cache_decorator_functionality.py  test_cache_simple.py  test_dip_compliance.py  test_direct_diskcache.py  test_diskcache.py  test_field_concepts.py  test_field_discovery_service.py  test_field_mapping.py  test_financial_cache_business_scenarios.py  test_financial_query_service.py  test_financial_statements_aggregation.py  test_hk_stock_queryers.py  test_integration_final.py  test_intelligent_field_router_tdd.py  test_interface_compatibility.py  test_isp_compliance.py  test_lsp_compliance.py  test_mcp_field_mapping.py  test_mcp_http_integration.py  test_mcp_server.py  test_mcp_tools.py  test_mcp_tools_basic.py  test_models.py  test_moutai_revenue_analysis.py  test_multi_config_balance_sheet_tdd.py  test_namespaced_config_loader_tdd.py  test_narrow_table_integration.py  test_ocp_compliance.py  test_raw_data_access.py  test_real_scenario.py  test_requirements.md  test_simple_diskcache.py  test_smart_cache_core.py  test_smart_cache_coverage.py  (+7 more)
tests/api/: __init__.py  test_dependencies.py  test_dependencies_integration.py  test_field_discovery_routes.py  test_financial_routes.py  test_financial_statements_routes.py  test_models.py
tests/core/: test_unit_converter.py
tests/domain/: test_financial_standard.py  test_market_fields_inheritance.py
webapp/: __init__.py  api_test.html  app.py  chart_utils.py  config.py  data_formatter.py  main.py  streamlit_checklist_analysis.py  ui_components.py  utils.py
(+234 files in other folders)
