[project]
name = "akshare-value-investment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yapex", email = "yapex.yin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.17.83",
    "dependency-injector>=4.48.2",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.51.0",
    "mcp>=1.0.0",
    "poethepoet>=0.37.0",
    "pytest-asyncio>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
akshare-value-investment = "akshare_value_investment:main"
akshare-mcp-server = "akshare_value_investment.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src/akshare_value_investment",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
    "--tb=short",
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 慢速测试",
]
asyncio_mode = "auto"

[tool.poe.tasks]
# MCP服务器任务
mcp-server = "python -m akshare_value_investment.mcp_server"

# 基础任务
test = "pytest"
demo = "python examples/demo.py"
install = "pip install -e ."

# 验证任务
verify-mcp = "python -c \"from akshare_value_investment.mcp_server import AkshareMCPServer; print('✅ MCP服务器验证通过')\""

# 开发任务组合
dev = ["install", "test"]
check = ["test", "verify-mcp"]

# Claude Code MCP配置任务
# 添加MCP服务器到Claude Code (本地范围)
mcp-add-local = "claude mcp add --scope local --transport stdio akshare-value-investment -- uv run python -m akshare_value_investment.mcp_server"

# 添加MCP服务器到Claude Code (项目范围)
mcp-add-project = "claude mcp add --scope project --transport stdio akshare-value-investment -- uv run python -m akshare_value_investment.mcp_server"

# 移除MCP服务器
mcp-remove = "claude mcp remove akshare-value-investment"

# 列出MCP服务器
mcp-list = "claude mcp list"

# 获取MCP服务器详情
mcp-get = "claude mcp get akshare-value-investment"
