[project]
name = "akshare-value-investment"
version = "0.2.0"
description = "基于 akshare 的价值投资分析系统，提供跨市场（A股、港股、美股）财务指标查询和财务三表分析功能"
readme = "README.md"
authors = [
    { name = "yapex", email = "yapex.yin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.17.83",
    "anthropic",
    "dependency-injector>=4.48.2",
    "diskcache>=5.6.3",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "poethepoet>=0.37.0",
    "pyyaml>=6.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "streamlit>=1.51.0",
    "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
akshare-value-investment = "akshare_value_investment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src/akshare_value_investment",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
    "--tb=short",
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
    "slow: 慢速测试",
]
asyncio_mode = "auto"

[tool.poe.tasks]

# 基础任务
test = "pytest"
demo = "python examples/demo.py"
install = "pip install -e ."

# FastAPI任务
api = "uvicorn akshare_value_investment.api.main:create_app --reload"

# Streamlit任务
streamlit = "sh -c 'PYTHONPATH=src:webapp uv run streamlit run webapp/main.py --server.address localhost --server.port 8501'"


